# gitviper

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: test.yaml
gitviper/: base.py  client.py  constants.py  exceptions.py  requester.py
gitviper/api_mixins/: org.py  repo.py  team.py
gitviper/schema/: installation_token.py  organization.py  rate_limit.py  repository.py  repository_create.py  repository_update.py  tag.py  team.py  team_update.py  topic.py
tests/: helpers.py  test_auth.py  test_client.py  test_org.py  test_repo.py  test_requester.py  test_team.py
